--- a/language/types.xml
+++ b/language/types.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.10 $ -->
+<!-- $Revision: 1.11 $ -->
 <!-- EN-Revision: 1.119 -->
  <chapter id="language.types">
   <title>타입</title>
@@ -501,10 +501,10 @@ echo (int) ( (0.1+0.7) * 10 ); // echoes 7!
   </sect1>
 
   <sect1 id="language.types.float">
-   <title>Floating point numbers</title>
+   <title>부동소수점</title>
    <para>
-    Floating point numbers (AKA "floats", "doubles" or "real numbers") can be 
-    specified using any of the following syntaxes: 
+    부동소수점(AKA "floats", "doubles", "real numbers")은 다음과 같은
+    문법으로 표현될수 있다.
     <informalexample>
      <programlisting role="php">
 <![CDATA[
@@ -516,7 +516,7 @@ $c = 7E-10;
 ]]>
      </programlisting>
     </informalexample>
-    Formally:
+    공식적으로:
     <informalexample>
      <programlisting role="php">
 LNUM          [0-9]+
@@ -524,122 +524,108 @@ DNUM          ([0-9]*[\.]{LNUM}) | ({LNUM}[\.][0-9]*)
 EXPONENT_DNUM ( ({LNUM} | {DNUM}) [eE][+-]? {LNUM})
      </programlisting>
     </informalexample>
-    The size of a float is platform-dependent, 
-    although a maximum of ~1.8e308 with a precision of roughly 14 
-    decimal digits is a common value (that's 64 bit IEEE format).
+    float의 크기는 십진수 14자리가 일반적인 값(64비트 IEEE 포맷)이 되는
+    정밀도를 갖는 ~1.8e308까지의 최대값을 갖을지라도 플랫폼에 따라 달라진다.
    </para>
  
    <warning id="warn.float-precision">
-    <title>Floating point precision</title>
+    <title>부동소수점 정밀도</title>
     <para>
-     It is quite usual that simple decimal fractions like
-     <literal>0.1</literal> or <literal>0.7</literal> cannot be
-     converted into their internal binary counterparts without a
-     little loss of precision. This can lead to confusing results: for
-     example, <literal>floor((0.1+0.7)*10)</literal> will usually
-     return <literal>7</literal> instead of the expected
-     <literal>8</literal> as the result of the internal representation
-     really being something like <literal>7.9999999999...</literal>.
+     <literal>0.1</literal>이나 <literal>0.7</literal>와 같은 단순한
+     십진수의 분수는 약간의 정밀도의 소실없이 내부적인 이진처리로 변환될
+     수 없다. 이 사실은 혼란스런 결과를 유도할수 있다: 예를 들면,
+     <literal>floor((0.1+0.7)*10)</literal>은 기대값 <literal>8</literal>이 아닌
+     <literal>7</literal>을 돌려준다. 내부적인 표현이
+     <literal>7.9999999999...</literal>와 같을것이기 때문이다.
     </para>
     <para>
-     This is related to the fact that it is impossible to exactly
-     express some fractions in decimal notation with a finite number
-     of digits. For instance, <literal>1/3</literal> in decimal form
-     becomes <literal>0.3333333. . .</literal>.
+     이와 같은 이유로 유한값의 십진표기법을 쓰는 몇몇 소수를 정확히 표현할수 
+     없다는 것이다. 예를 들면, 십진표기법의 <literal>1/3</literal>은 
+     <literal>0.3333333. . .</literal>이 된다.
     </para>
     <para>
-     So never trust floating number results to the last digit and
-     never compare floating point numbers for equality. If you really
-     need higher precision, you should use the <link
-     linkend="ref.bc">arbitrary precision math functions</link>
-     or <link linkend="ref.gmp">gmp</link> functions instead.
+     결코 부동소수점이 마지막 수를 갖을수 있을것이라고 생각하거나 부동소수점이
+     동일한지 비교하도록 해서는 안된다. 더 높은 정밀도가 필요하면, 대신
+     <link linkend="ref.bc">arbitrary precision math functions</link>나
+     <link linkend="ref.gmp">gmp</link>함수를 사용하도록 해야 한다.
     </para>
    </warning>
 
    <sect2 id="language.types.float.casting">
-    <title>Converting to float</title>
+    <title>float으로 변환하기</title>
     
     <para>
-     For information on when and how strings are converted to floats,
-     see the section titled <link linkend="language.types.string.conversion">String
-     conversion to numbers</link>. For values of other types, the conversion
-     is the same as if the value would have been converted to integer
-     and then to float. See the <link linkend="language.types.integer.casting">Converting
-     to integer</link> section for more information.
+     문자열이 언제, 어떻게 float으로 변환하는지에 대한 정보는
+     <link linkend="language.types.string.conversion">문자열을 숫자로 변환하기</link>섹션을 참고하라.
+     다른 타입에 대한 변환은 그 값이 integer나 float으로 변환하는 방식과 동일하다.
+     더 자세한 정보는 <link linkend="language.types.integer.casting">integer로 변환하기</link>를 참고.
     </para>
    </sect2>
   </sect1>
 
   <sect1 id="language.types.string">
-   <title>Strings</title>
+   <title>문자열</title>
    <para>
-    A <type>string</type> is series of characters. In PHP,
-    a character is the same as a byte, that is, there are exactly
-    256 different characters possible. This also implies that PHP
-    has no native support of Unicode. See <function>utf8_encode</function>
-    and <function>utf8_decode</function> for some Unicode support.
+    <type>string</type>은 일련의 문자들이다. PHP에서 문자는 바이트와 같다. 즉
+    정확히 서로다른 256개의 문자를 사용할수 있다. 또한 PHP는 기본적으로 유니코드 지원을
+    갖지않는다. 유니코드에 대한 지원은 <function>utf8_encode</function>과
+    <function>utf8_decode</function>함수를 참고
    </para>
    <note>
     <simpara>
-     It is no problem for a string to become very large. 
-     There is no practical bound to the size
-     of strings imposed by PHP, so there is no reason at all
-     to worry about long strings.
+     문자열이 아무 문제없이 매우 커질수 있다. PHP에서 사용되는 문자열은 
+     실질적으로 범위제한을 갖지 않는다. 그래서 긴 문자열에 대해서 걱정할
+     이유가 전혀 없다.
     </simpara>
    </note>
    <sect2 id="language.types.string.syntax">
-    <title>Syntax</title>
+    <title>문법</title>
     <para>
-     A string literal can be specified in three different
-     ways.
+     문자열 리터럴은 3가지 다른 방식으로 표현될수 있다.
      <itemizedlist>
 
       <listitem>
        <simpara>
-        <link linkend="language.types.string.syntax.single">single quoted</link>
+        <link linkend="language.types.string.syntax.single">작은 따옴표</link>
        </simpara>
       </listitem>
       <listitem>
        <simpara>
-        <link linkend="language.types.string.syntax.double">double quoted</link>
+        <link linkend="language.types.string.syntax.double">큰 따옴표</link>
        </simpara>
       </listitem>
       <listitem>
        <simpara>
-        <link linkend="language.types.string.syntax.heredoc">heredoc syntax</link>
+        <link linkend="language.types.string.syntax.heredoc">상속 문법</link>
        </simpara>
       </listitem>
 
      </itemizedlist>
     </para>
     <sect3 id="language.types.string.syntax.single">
-     <title>Single quoted</title>
+     <title>작은 따옴표</title>
      <para>
-      The easiest way to specify a simple string is to
-      enclose it in single quotes (the character <literal>'</literal>). 
+      단순한 문자열을 표현하는 가장 간단한 방법이 작은 따옴표
+      (문자 <literal>'</literal>)로 문자열을 둘러싸면 된다.
      </para>
      <para>
-      To specify a literal single
-      quote, you will need to escape it with a backslash
-      (<literal>\</literal>), like in many other languages.
-      If a backslash needs to occur before a single quote or at 
-      the end of the string, you need to double it.
-      Note that if you try to escape any
-      other character, the backslash will also be printed! So
-      usually there is no need to escape the backslash itself.
+      작은따옴표를 리터럴로 표현하려면 역슬래쉬(<literal>\</literal>)로
+      회피할 필요가 있다. 다른 많은 언어에서도 이와같은 방식을 사용한다.
+      작은 따옴표 앞이나 문자열의 끝에서 역슬래쉬가 있을필요가 있으면,
+      이것은 중복사용할 필요가 있다. 다른 모든 문자를 회피하려하면 역슬래쉬가
+      출력되어야 할것이란 것에 주의하라! 그래서 보통은 역슬래쉬 자체를 회피할
+      필요가 없다.
       <note>
        <simpara>
-        In PHP 3, a warning will
-        be issued at the <literal>E_NOTICE</literal> level when this
-        happens.
+        PHP 3에서 이와 같은 일이 발생하면 <literal>E_NOTICE</literal>레벨의
+        경고가 출력될것이다.
        </simpara>
       </note>
       <note>
        <simpara>
-        Unlike the two other syntaxes, <link 
-        linkend="language.variables">variables</link> and escape sequences
-        for special characters will <emphasis>not</emphasis> be expanded 
-        when they occur in single quoted strings.
+        이외 다른 두가지 문법과는 달리 작은 따옴표로 둘러싸인 문자열에서
+        <link linkend="language.variables">변수</link>와 특별한 문자를 위한 
+        회피는 전개되지 못한다. 
        </simpara>
       </note>
       <informalexample>
@@ -673,14 +659,13 @@ echo 'Variables do not $expand $either';
      </para>
     </sect3>
     <sect3 id="language.types.string.syntax.double">
-     <title>Double quoted</title>
+     <title>큰 따옴표</title>
      <para>
-      If the string is enclosed in double-quotes ("),
-      PHP understands more escape sequences for special
-      characters:
+      문자열이 큰따옴표(")로 둘러싸이면, PHP는 특별한 문자의
+      회피를 더 잘 이해한다.
      </para>
      <table>
-      <title>Escaped characters</title>
+      <title>회피 문자</title>
       <tgroup cols="2">
        <thead>
         <row>
@@ -716,79 +701,70 @@ echo 'Variables do not $expand $either';
         <row>
          <entry><literal>\[0-7]{1,3}</literal></entry>
          <entry>
-          the sequence of characters matching the regular
-          expression is a character in octal notation
+          이 정규표현식은 8진표기법의 일련의 문자이다.
          </entry>
         </row>
         <row>
          <entry><literal>\x[0-9A-Fa-f]{1,2}</literal></entry>
          <entry>
-          the sequence of characters matching the regular
-          expression is a character in hexadecimal notation
+          이 정규표현식은 16진표기법의 일련의 문자이다.
          </entry>
         </row>
        </tbody>
       </tgroup>
      </table>
      <para>
-      Again, if you try to escape any other character, the
-      backslash will be printed too!
+      다시 얘기하면, 다른 어떤 문자를 회피하려한다면, 역슬래쉬도
+      출력될것이다!
      </para>
      <para>
-      But the most important feature of double-quoted strings
-      is the fact that variable names will be expanded.
-      See <link linkend="language.types.string.parsing">string 
-      parsing</link> for details.
+      그러나 큰따옴표로 둘러싸인 문자열의 가장 중요한 특징은
+      변수명이 전개될것이란 사실이다. 더 자세한 사항은
+      <link linkend="language.types.string.parsing">문자열 해석</link>을
+      참고.
      </para>
     </sect3>
     
     <sect3 id="language.types.string.syntax.heredoc">
-     <title>Heredoc</title>
+     <title>히어닥 문법</title>
      <simpara>
-      Another way to delimit strings is by using heredoc syntax
-      ("&lt;&lt;&lt;").  One should provide an identifier after
-      <literal>&lt;&lt;&lt;</literal>, then the string, and then the
-      same identifier to close the quotation. 
+      문자열을 구분하는 다른 방법은 히어닥 문법("&lt;&lt;&lt;")을
+      사용하는것이다. 
+      <literal>&lt;&lt;&lt;</literal>이후에 식별자가 와야 하고
+      그다음에 문자열, 그다음에 인용을 닫는 어떤 식별자가 와야 한다.
      </simpara>
      <simpara>
-      The closing identifier <emphasis>must</emphasis> begin in the
-      first column of the line. Also, the identifier used must follow
-      the same naming rules as any other label in PHP: it must contain
-      only alphanumeric characters and underscores, and must start with
-      a non-digit character or underscore.
+      닫기 식별자는 그 줄의 첫번째 컬럼에서 시작<emphasis>되어야 한다</emphasis>.
+      또한, 식별자는 PHP의 다른 라벨과 같은 명명규칙을 따라야 한다:
+      오직 알파벳 숫자와 밑줄을 포함하고 숫자가 아닌 문자나 밑줄로
+      시작되어야 한다.
      </simpara>
      
      <warning>
       <simpara>
-       It is very important to note that the line with the closing
-       identifier contains no other characters, except 
-       <emphasis>possibly</emphasis> a semicolon (<literal>;</literal>).
-       That means especially that the identifier 
-       <emphasis>may not be indented</emphasis>, and there
-       may not be any spaces or tabs after or before the semicolon.
-       It's also important to realize that the first character before
-       the closing identifier must be a newline as defined by your
-       operating system. This is <literal>\r</literal> on Macintosh
-       for example.
+       닫기 식별자를 갖는 줄은 <emphasis>가능한</emphasis> 
+       세미콜른(<literal>;</literal>)를 제외하고
+       다른 문자를 포함하지 않는다는것에 주의해야 한다. 이말은 특별히
+       식별자가 <emphasis>줄맞춤이 되지 않을 것</emphasis>이고 어떤 공백이나 탭문자도
+       세미콜른의 앞이나 뒤에 있지 않을것이란 것이다. 닫기 식별자 전의
+       첫 문자는 운영체제에서 정의된 새줄이 되어야 한다는 것을 인식해야 한다.
+       예를 들면 매킨토시에서는 <literal>\r</literal>이 된다.
       </simpara>
       <simpara>
-       If this rule is broken and the closing identifier is not "clean"
-       then it's not considered to be a closing identifier and PHP 
-       will continue looking for one.  If in this case a proper closing 
-       identifier is not found then a parse error will result with the 
-       line number being at the end of the script.
+       이 규칙을 깨고 닫기 식별자가 "확실"하지 않으면, 닫기 식별자로
+       인식되지 않으며 PHP는 다른 식별자를 계속 찾게 될것이다. 그래서 적절한
+       닫기 식별자가 발견되지 않으면 스크립트 끝의 줄번호로 해석 에러가
+       출력될것이다.
       </simpara>
      </warning>
 
      <para>
-      Heredoc text behaves just like a double-quoted string, without
-      the double-quotes. This means that you do not need to escape quotes
-      in your here docs, but you can still use the escape codes listed
-      above. Variables are expanded, but the same care must be taken
-      when expressing complex variables inside a here doc as with
-      strings.
+      히어닥 텍스트는 큰따옴표가 없지만 큰따옴표로 둘러싸인 문자열처럼 동작한다.
+      히어닥에서는 따옴표를 회피할 필요가 없다는 의미를 갖는다. 그러나 여전히
+      위에서 열거한 회피 코드를 사용할수 있다. 문자가 전개되면, 히어닥 안의
+      복합 변수를 문자열로 표현할때 같은 주의가 필요하다.
       <example> 
-       <title>Heredoc string quoting example</title>
+       <title>히어닥 문자열 인용 예</title>
        <programlisting role="php">
 <![CDATA[
 <?php
@@ -827,40 +803,36 @@ EOT;
   
      <note>
       <para>
-       Heredoc support was added in PHP 4.
+       히어닥 지원은 PHP 4에서 추가되었다.
       </para>
      </note>
     </sect3>
 
     <sect3 id="language.types.string.parsing">
-     <title>Variable parsing</title>
+     <title>변수 해석</title>
      <simpara>
-      When a string is specified in double quotes or with
-      heredoc, <link linkend="language.variables">variables</link> are 
-      parsed within it. 
+      문자열이 큰따옴표나 히어닥으로 표현되면
+      <link linkend="language.variables">변수</link>는 그 안에서 해석된다.
      </simpara>
      <simpara>
-      There are two types of syntax: a 
-      <link linkend="language.types.string.parsing.simple">simple</link>
-      one and a 
-      <link linkend="language.types.string.parsing.complex">complex</link>
-      one.
-      The simple syntax is the most common and convenient. It provides a way
-      to parse a variable, an <type>array</type> value, or an <type>
-      object</type> property.
+      두가지 형태의 문법이 존재한다:
+      <link linkend="language.types.string.parsing.simple">단순</link>문법과
+      <link linkend="language.types.string.parsing.complex">복합</link>문법이다.
+
+      단순 문법은 가장 일반적이고 가장 편하다. 이 문법은 
+      변수나 <type>array</type>값, <type>object</type>속성을 해석하는
+      방법을 제공한다.
      </simpara>
      <simpara>
-      The complex syntax was introduced in PHP 4, and can be recognised
-      by the curly braces surrounding the expression.
+      복합 문법은 PHP 4에서부터 지원되고, 중괄호로 둘러싸는 표현으로 인식된다.
      </simpara>
 
      <sect4 id="language.types.string.parsing.simple">
-      <title>Simple syntax</title>
+      <title>단순 문법</title>
       <simpara>
-       If a dollar sign (<literal>$</literal>) is encountered, the
-       parser will greedily take as many tokens as possible to form a
-       valid variable name. Enclose the variable name in curly
-       braces if you want to explicitly specify the end of the name.
+       달러사인(<literal>$</literal>)과 만나면, 해석기는 가능한 많은
+       토큰을 취해서 유효한 변수명을 형성하게 된다. 중괄호로 변수명을
+       둘러싸면 이름의 끝을 명시적으로 표시하려는 것이다. 
       </simpara>
       <informalexample>
        <programlisting role="php">
@@ -876,12 +848,10 @@ echo "He drank some {$beer}s"; // works
        </programlisting>
       </informalexample>
       <simpara>
-       Similarly, you can also have an <type>array</type> index or an <type>
-       object</type> property parsed. With array indices, the closing square 
-       bracket (<literal>]</literal>) marks the end of the index. For
-       object properties the same rules apply as to simple variables,
-       though with object properties there doesn't exist a trick like
-       the one with variables.
+       비슷하게, <type>array</type> 인덱스나 해석된 <type>object</type>특성을 보유할수
+       있다. 배열 인덱스로 닫음 대괄호 (<literal>]</literal>)는 인덱스의 끝을 표시한다.
+       객체 속성은 변수를 갖는 트릭이 존재하지 않지만, 객체 특성에 대해서 단순한 변수에
+       적용되는 규칙과 같다. 
        
        <!-- XXX isn't &true; :(, this would be the trick
        Also, the same trick with curly-braces works if you
@@ -934,24 +904,23 @@ echo "This square is $square->{width}00 centimeters broad.";
        </programlisting>
       </informalexample>
       <simpara>
-       For anything more complex, you should use the complex syntax.
+       좀더 복잡한 변수에 대해서, 복합 문법을 사용해야 한다.
       </simpara>
      </sect4>
 
      <sect4 id="language.types.string.parsing.complex">
-      <title>Complex (curly) syntax</title>
+      <title>복합(curly) 문법</title>
       <simpara>
-       This isn't called complex because the syntax is complex,
-       but because you can include complex expressions this way.
+       이 방법은 문법이 복합적이라서 복합이라고 부르는것이 아니다.
+       대신에 이 방법으로 복합 표현식을 포함할수 있기 때문이다.
      </simpara>
      <simpara>
-      In fact, you can include any value that is in the namespace
-      in strings with this syntax. You simply write the expression
-      the same way as you would outside the string, and then include
-      it in { and }. Since you can't escape '{', this syntax will
-      only be recognised when the $ is immediately following the {.
-      (Use "{\$" or "\{$" to get a literal "{$").
-      Some examples to make it clear:
+      사실, 이 문법으로 문자열의 네임스페이스에 존재하는 어떤변수
+      도 포함할수 있다. 단순히 문자열을 드러내는 방법과 동일한 표현식을
+      쓸수 있다. 그리고 { 과 } 안에 그것을 포함한다. '{'를 회피할
+      수 없기 때문에 이 문법은 $가 즉시 {뒤에 올때만 인식된다.
+      ("{$" 리터럴을 쓰려면  "{\$" 이나 "\{$" 을 사용하라).
+      몇가지 예를 보고 위 설명을 이해해보자:
      </simpara>
      <informalexample>
       <programlisting role="php">
