--- a/language/variables.xml
+++ b/language/variables.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.13 $ -->
+<!-- $Revision: 1.14 $ -->
 <!-- EN-Revision: 1.66 -->
  <chapter id="language.variables">
   <title>ë³€ìˆ˜</title>
@@ -36,7 +36,7 @@ echo "$var, $Var";      // outputs "Bob, Joe"
 
 $4site = 'not yet';     // invalid; starts with a number
 $_4site = 'not yet';    // valid; starts with an underscore
-$täyte = 'mansikka';    // valid; 'ä' is (Extended) ASCII 228.
+$tä¹´e = 'mansikka';    // valid; 'ä§ is (Extended) ASCII 228.
 ?>
 ]]>
      </programlisting>
@@ -823,7 +823,7 @@ if (isset($_POST['action']) && $_POST['action'] == 'submitted') {
     <select multiple name="beer[]">
         <option value="warthog">Warthog</option>
         <option value="guinness">Guinness</option>
-        <option value="stuttgarter">Stuttgarter Schwabenbräu</option>
+        <option value="stuttgarter">Stuttgarter Schwabenbräµ¼B></option>
     </select><br>
     <input type="hidden" name="action" value="submitted">
     <input type="submit" name="submit" value="submit me!">
