--- a/language/variables.xml
+++ b/language/variables.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.15 $ -->
+<!-- $Revision: 1.16 $ -->
 <!-- EN-Revision: 1.66 -->
  <chapter id="language.variables">
   <title>변수</title>
@@ -823,7 +823,7 @@ if (isset($_POST['action']) && $_POST['action'] == 'submitted') {
     <select multiple name="beer[]">
         <option value="warthog">Warthog</option>
         <option value="guinness">Guinness</option>
-        <option value="stuttgarter">Stuttgarter Schwabenbr䵼B></option>
+        <option value="stuttgarter">Stuttgarter Schwabenbräu</option>
     </select><br>
     <input type="hidden" name="action" value="submitted">
     <input type="submit" name="submit" value="submit me!">
