--- a/language/constants.xml
+++ b/language/constants.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.7 $ -->
+<!-- $Revision: 1.8 $ -->
 <!-- EN-Revision: 1.33 -->
  <chapter id="language.constants">
   <title>상수</title>
@@ -55,7 +55,7 @@
    </simpara>
    <note>
     <simpara>
-     상수와 (전역)변수는 서로 다른 네임스페이스(namespace)상에 이다.
+     상수와 (전역)변수는 서로 다른 네임스페이스(namespace)상에 있다.
      이말의 의미는 예를 들면 &true;와 <varname>$TRUE</varname>은
      일반적으로 다르다는것이다.
     </simpara>
@@ -67,7 +67,7 @@
     알수 있다.   
     왜 <link linkend="language.types.array.foo-bar">$foo[bar]</link>가
     잘못됐는지 (<literal>bar</literal>를 상수로 <function>define</function>
-    하지않았다면) 매뉴얼을 보세요. 단순히 상수가 설정되었는지만 확인하려
+    하지않았다면) 매뉴얼을 참고한다. 단순히 상수가 설정되었는지만 확인하려
     한다면 <function>defined</function>함수를 쓰면 됩니다.
    </simpara>
    <para>
