--- a/language/expressions.xml
+++ b/language/expressions.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.10 $ -->
+<!-- $Revision: 1.11 $ -->
 <!-- EN-Revision: 1.21 -->
  <chapter id="language.expressions">
    <title>표현식</title>
@@ -39,11 +39,11 @@ function foo ()
     </informalexample></para>
 
    <simpara>
-    함수의 개념에 익숙하다면 (그렇지 않으면, 함수에 관한 장을 보시오)
+    함수의 개념에 익숙하다면 (그렇지 않으면, 함수에 관한 장을 참고)
     <literal>$c = foo()</literal>로 쓰는것이 <literal>$c = 5</literal>와
-    같을것이라고 생각할것이다. 옳은 생각이다. 함수는 리턴값의 값을 갖는
-    표현식이다. foo()가 5를 리턴하기 때문에 'foo()'표현식의 값은 5가 된다.
-    함수는 대체로 정적인 값보다는 계산값을 리턴한다.
+    같을것이라고 생각할것이다. 옳은 생각이다. 함수는 반환된 값을 갖는
+    표현식이다. foo()가 5를 반환하기때문에 'foo()'표현식의 값은 5가 된다.
+    함수는 대체로 정적인 값보다는 계산값을 반환한다.
    </simpara>
 
    <simpara>
@@ -64,7 +64,7 @@ function foo ()
     지정 자체는 지정값 5만 적용된다. 실제로, '$a = 5'라는 식은 그것이 무엇을
     하든 5라는 값을 갖는 표현식이라는 것이다. 따라서, '$b = ($a = 5)'라는 식은
     '$a = 5; $b = 5'를 쓰는것과 같다 (세미콜른은 구문의 끝을 표시한다).
-    지정연산은 오른쪽에서 왼쪽방향을 해석되므로 '$b = $a = 5'라고 쓸수 있다.
+    지정연산은 오른쪽에서 왼쪽방향으로 해석되므로 '$b = $a = 5'라고 쓸수 있다.
    </simpara>
 
    <simpara>
@@ -101,7 +101,7 @@ function foo ()
     PHP에서는 C와 같은 다른 언어처럼 더 짧은 형태로 쓸수있다. 그래서, 좀더 
     이해하기 쉽고 좀더 빨리 이해할수있다. $a의 현재 값에 3을 더하는 것은 
     '$a += 3'으로 쓸수 있다. 이 표현식의 의미는 정확히 '$a값을 취해 그 값에 3을 더하고
-    다시 $a에 계산된값을 지정하라'이다. 좀더 짧고 명확뿐만 아니라, 좀더 빠른 수행이
+    다시 $a에 계산된값을 지정하라'이다. 좀더 짧고 명확할 뿐만 아니라, 좀더 빠른 수행이
     이루어진다. 일반적인 표현식의 값처럼 '$a += 3'의 값은 지정값이다. 3이 아니라,
     $a에 3을 더한 값이라는 것에 주의하라 (이값은 $a에 지정되는 값이다)
     어떠한 두개연속의 연산자도 이런 연산자-지정 방식으로 사용될수 있다.
@@ -125,9 +125,9 @@ $first ? $second : $third
     </informalexample>
    </para>
    <para>
-    first 하위 표현식의 값이 &true; (non-zero)이면 second 하위 표현식이
+    first 에 속하는 표현식의 값이 &true; (non-zero)이면 second 에 속하는 표현식이
     적용되고, 이것이 조건적 표현식의 결과가 된다. 이 경우가 아니면,
-    third 하위 표현식이 적용되고, 그 값이 된다.
+    third 에 속하는 표현식이 적용되고, 그 값이 된다.
    </para>
 
    <para>
@@ -183,10 +183,10 @@ $h = $g += 10;      /* 우선, $g는 10만큼 증가되어 24가 됨.
     
     상수 &true;와 &false; (대소문자를 구별하지 않음)는 두가지 논리값이다.
     필요하면, 표현식은 자동적으로 논리값으로 변환된다. 더자세한 정보는
-    <link linkend="language.types.typecasting">형-캐스팅에 관한 섹션</link>을 참고할것.
+    <link linkend="language.types.typecasting">형-캐스트 섹션</link>을 참고할것.
    </simpara>
    <simpara>
-    PHP는 표현식의 완벽하고 파워풀한 구현방법을 제공한다. 그런 방법을
+    PHP는 표현식의 완벽하고도 강력한 구현방법을 제공한다. 그런 방법을
     완전히 문서화하는 것은 이 매뉴얼의 범위를 넘는다. 위 예제 코드들은
     표현식이 무엇인지에 대한것과 유용한 표현식을 구축할수 있는 방법에 대한
     아이디어를 줄것이다. 이후 매뉴얼에서는 유효한 PHP 표현식을
